// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works when it has only passing tests 1`] = `
"PASS test/__fixtures__/passing/__tests__/test.mocha.js
PASS test/__fixtures__/passing/__tests__/test.jest.js
Test Suites: 2 passed, 2 total
Tests: 2 passed, 2 total
Snapshots: 0 total
Time:
Ran all test suites.

"
`;

exports[`Works when it has only passing tests and --coverage 1`] = `
"PASS test/__fixtures__/passing/__tests__/test.mocha.js
PASS test/__fixtures__/passing/__tests__/test.jest.js
Test Suites: 2 passed, 2 total
Tests: 2 passed, 2 total
Snapshots: 0 total
Time:
Ran all test suites.

---------------|---------|----------|---------|---------|-------------------
File | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s
---------------|---------|----------|---------|---------|-------------------
All files | 100 | 100 | 100 | 100 |
test.mocha.js | 100 | 100 | 100 | 100 |
---------------|---------|----------|---------|---------|-------------------
"
`;

exports[`Works when it has only passing tests and --coverage with v8 1`] = `
"PASS test/__fixtures__/passing/__tests__/test.mocha.js
PASS test/__fixtures__/passing/__tests__/test.jest.js
Test Suites: 2 passed, 2 total
Tests: 2 passed, 2 total
Snapshots: 0 total
Time:
Ran all test suites.

---------------|---------|----------|---------|---------|-------------------
File | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s
---------------|---------|----------|---------|---------|-------------------
All files | 100 | 100 | 100 | 100 |
test.mocha.js | 100 | 100 | 100 | 100 |
---------------|---------|----------|---------|---------|-------------------
"
`;
